--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
+XYZ
+
 version: 1.13.0+58
 
 environment:
